--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "axios": "^1.7.9",
     "nuxt": "^3.15.0",
     "pinia": "^2.3.0",
+    "swiper": "^11.2.1",
     "vue": "latest",
     "vue-router": "latest"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.49"
+    "postcss": "^8.4.49",
+    "sass-embedded": "^1.83.4"
   },
   "overrides": {
     "vue": "latest"
