--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "swiper": "^11.2.1",
     "vue": "latest",
     "vue-chartjs": "^5.3.2",
-    "vue-router": "latest"
+    "vue-router": "latest",
+    "vue-toastification": "^1.7.14",
+    "vue3-toastify": "^0.2.8"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
