--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.49",
-    "sass-embedded": "^1.83.4"
+    "postcss": "^8.4.49"
   },
   "overrides": {
     "vue": "latest"
