--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nuxt/ui": "^2.20.0",
     "@nuxtjs/i18n": "^9.0.0-rc.2",
     "@pinia/nuxt": "^0.9.0",
+    "aos": "^2.3.4",
     "axios": "^1.7.9",
     "chart.js": "^4.4.7",
     "nuxt": "^3.15.0",
