--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "vue-chartjs": "^5.3.2",
     "vue-router": "latest",
     "vue-toastification": "^1.7.14",
+    "vue3-count-to": "^1.1.2",
     "vue3-toastify": "^0.2.8"
   },
   "devDependencies": {
