--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "aos": "^2.3.4",
     "axios": "^1.7.9",
     "chart.js": "^4.4.7",
+    "gsap": "^3.12.7",
     "nuxt": "^3.15.0",
     "pinia": "^2.3.0",
     "swiper": "^11.2.1",
