--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,5 @@
     "editor.quickSuggestions": {
         "strings": true
     },
-    "files.autoSave": "onFocusChange",
+    "files.autoSave": "afterDelay",
 }
